--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v3
       
     - name: Build test
-      run: make tests
+      run: make
       
     - name: Run tests
       run: ./tests/tests
